fix play mode icon tab spacing and position

--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -12,9 +12,18 @@
   }
 
   &--icon {
-    font-size: @font-size--large;
+    position: absolute;
+    top: 0;
+    right: @gutter-v2;
     width: auto;
-    margin-left: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: @font-size--large;
+
+    @media @desktop {
+      right: @gutter-v2-desktop;
+    }
   }
 
   &__items {
