--- a/resources/assets/less/bem/header-nav-mobile.less
+++ b/resources/assets/less/bem/header-nav-mobile.less
@@ -2,7 +2,7 @@
 // See the LICENCE file in the repository root for full licence text.
 
 .header-nav-mobile {
-  width: auto;
+  width: 100%;
   font-size: @font-size--title-small;
   position: relative;
 
